CSS updates for overall widget size, gid visibility fix for nrc report, misc bug fixes, wind widget urls changed back to correct ones

--- a/widgets/FireWidget/src/runtime/assets/style.css
+++ b/widgets/FireWidget/src/runtime/assets/style.css
@@ -25,3 +25,17 @@
     max-width: 250px;
     margin-bottom: 5px;
 }
+
+div[role=dialog] {
+    inset: 0 0 auto auto !important;
+    width: 360px;
+    height: auto;
+    padding: 0;
+    margin: auto;
+    z-index: 5;
+    position: absolute;
+    opacity: 1;
+    border-radius: 4px;
+    float: right;
+    transform: translate(0,47px) !important;
+}
