--- a/widgets/RMPIdentifyWidget/src/runtime/assets/style.css
+++ b/widgets/RMPIdentifyWidget/src/runtime/assets/style.css
@@ -38,3 +38,17 @@ div.modal.jimu-outline-inside.fade.show {
     padding: 0;
     border: none;
 }
+
+div[role=dialog] {
+    inset: 0 0 auto auto !important;
+    width: 360px;
+    height: auto;
+    padding: 0;
+    margin: auto;
+    z-index: 5;
+    position: absolute;
+    opacity: 1;
+    border-radius: 4px;
+    float: right;
+    transform: translate(0,47px) !important;
+}
