--- a/widgets/WindWidget/src/runtime/assets/style.css
+++ b/widgets/WindWidget/src/runtime/assets/style.css
@@ -210,3 +210,17 @@
 /*  display: none !important; }*/
 
 /*!*# sourceMappingURL=style.css.map *!*/
+
+div[role=dialog] {
+    inset: 0 0 auto auto !important;
+    width: 360px;
+    height: auto;
+    padding: 0;
+    margin: auto;
+    z-index: 5;
+    position: absolute;
+    opacity: 1;
+    border-radius: 4px;
+    float: right;
+    transform: translate(0,47px) !important;
+}
